force-app/main/default/objects/WorkingWatch__c/WorkingWatch__c.object-meta.xml
<CustomObject>
    <description>商談を操作した時間を管理する。</description>
    <label>作業時間</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>作業時間名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>