force-app/main/default/objects/WorkingWatch__c/fields/CalculateTime__c.field-meta.xml
<CustomField>
    <fullName>CalculateTime__c</fullName>
    <description>ストップウォッチの経過時間を保持する。</description>
    <label>計測時間（分）</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>