force-app/main/default/objects/WorkingWatch__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <inlineHelpText>行った作業の内容を記載します。</inlineHelpText>
    <label>作業内容</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>