force-app/main/default/objects/WorkingWatch__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>作業時間を紐付ける商談を選択します。</inlineHelpText>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>作業時間</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>