force-app/main/default/objects/WorkingWatch__c/validationRules/CalculateTimeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CalculateTimeCheck</fullName>
    <active>true</active>
    <description>有効な入力値であることをチェックする。</description>
    <errorConditionFormula>NOT(REGEX( CalculateTime__c, &quot;^0|([1-9])([0-9]*)?$&quot;))</errorConditionFormula>
    <errorDisplayField>CalculateTime__c</errorDisplayField>
    <errorMessage>計測時間（分）は半角数値で入力してください。</errorMessage>
</ValidationRule>